--- a/package.json
+++ b/package.json
@@ -18,20 +18,28 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.13",
+    "@mui/material": "^5.15.13",
+    "@mui/x-date-pickers": "^6.19.7",
     "@reduxjs/toolkit": "~2.0.1",
     "@sentry/browser": "~7.88.0",
     "@sentry/react": "~7.88.0",
+    "ag-grid-react": "^31.1.1",
     "axios": "~1.6.2",
     "bootstrap": "~5.3.2",
     "classnames": "~2.3.2",
     "cookie": "~0.6.0",
     "lodash": "~4.17.21",
     "marked": "~11.1.0",
+    "material-react-table": "^2.12.1",
     "react": "~18.2.0",
     "react-bootstrap": "~2.9.1",
     "react-dom": "~18.2.0",
     "react-redux": "~9.0.4",
-    "react-router": "~6.21.0"
+    "react-router": "~6.21.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@babel/core": "~7.23.6",
@@ -68,6 +76,7 @@
     "mini-css-extract-plugin": "~2.7.6",
     "postcss": "~8.4.32",
     "postcss-loader": "~7.3.3",
+    "postcss-preset-env": "^9.5.2",
     "prettier": "~3.1.1",
     "react-refresh": "^0.14.0",
     "redux-mock-store": "~1.5.4",
