--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ setuptools = "^69.0.2"
 django-permissions-policy = "^4.18.0"
 django-csp = "^3.7"
 django-defender = "^0.9.7"
+pymongo = "^4.6.2"
+dnspython = "^2.6.1"
+pandas = "^2.2.1"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.2.7"
