--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,19 @@ services:
     volumes:
       - mongodata:/data/db:delegated
 
+  # TODO add script to init the bucket with public permission to easy local setup
+  minio:
+    image: docker.io/bitnami/minio:2022
+    ports:
+      - '9000:9000'
+      - '9001:9001'
+    volumes:
+      - 'minio_data:/data'
+    environment:
+      - MINIO_ROOT_USER=user
+      - MINIO_ROOT_PASSWORD=password
+      - MINIO_DEFAULT_BUCKETS=bucket
+
   broker:
     image: "rabbitmq:alpine"
 
@@ -49,6 +62,7 @@ services:
     depends_on:
       - db
       - db_nosql
+      - minio
       - broker
       - result
       - frontend
@@ -79,3 +93,4 @@ volumes:
   mongodata:
     name: rhombus_ai_dbdata_nosql
     external: true
+  minio_data:
