--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "~5.3.2",
     "classnames": "~2.3.2",
     "cookie": "~0.6.0",
+    "export-to-csv": "^1.2.4",
     "lodash": "~4.17.21",
     "marked": "~11.1.0",
     "material-react-table": "^2.12.1",
