--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pymongo = "^4.6.2"
 dnspython = "^2.6.1"
 pandas = "^2.2.1"
 minio = "^7.2.5"
+pyarrow = "^15.0.2"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.2.7"
