Read URL from env instead

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ DJANGO_SETTINGS_MODULE=rhombus_ai.settings.local
 CELERY_BROKER_URL=amqp://broker:5672//
 REDIS_URL=redis://result:6379
 DATABASE_URL=sqlite:///db.sqlite3
+MONGO_URL=mongodb://db_nosql:27017/
+MINIO_URL=minio:9000
